added config file & changed cehckbox message

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,10 @@ test.py
 
 *.idea
 *.db
+
+#Vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
